1>update reducer for contact; 2>update action for cntract; 3>update component for contact mapstate

--- a/output/index.html
+++ b/output/index.html
@@ -9,6 +9,28 @@
             "errno": 0,
             "msg": "",
             "data": {
+               //  "sub":[
+               //      {
+               //          "active": {
+               //              "name":"elieen",
+               //              "phone": "18618405059",
+               //              "email": "elieen@163.com"
+               //           }
+               //     },
+               //     {
+               //          "active2": {
+               //              "name":"elieen",
+               //              "phone": "18618405059",
+               //              "email": "elieen@163.com"
+               //          }
+               //     }
+               // ],
+               "active": {
+                   "name":"active:elieen",
+                   "phone": "17701321596",
+                   "email": "elieen19870715@163.com"
+                },
+
                "aboutData":{
                   title:"朝韩定于4月27日举行领导人会晤,中方回应--linkxiaoksksk",
                   star:"4.5",
@@ -324,5 +346,5 @@
 
 
   </div>
-<script type="text/javascript" src="/assets/app_e52b168b.js"></script></body>
+<script type="text/javascript" src="/assets/app_5ea25f93.js"></script></body>
 </html>
