1>set actions for reducer;2>set file for project;3>update component of params for contact dispatch

--- a/output/index.html
+++ b/output/index.html
@@ -346,5 +346,5 @@
 
 
   </div>
-<script type="text/javascript" src="/assets/app_5ea25f93.js"></script></body>
+<script type="text/javascript" src="/assets/app_ab5a2ebd.js"></script></body>
 </html>
